--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link href="css/index.css" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Inknut+Antiqua|Open+Sans&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Inknut+Antiqua|Open+Sans&display=swap"
+        rel="stylesheet">
 
     <title>Daisy Mesa - Portfolio</title>
 </head>
@@ -21,9 +22,9 @@
     <header>
         <nav>
             <div class="nav-bar">
-                <a href="#">My Work</a>
-                <a href="#">Resume</a>
-                <a href="#">Contact Me!</a>
+                <a href="#">MY WORK</a>
+                <a href="#">RESUME</a>
+                <a href="#">CONTACT ME</a>
             </div>
         </nav>
         <div class="title">
@@ -34,7 +35,7 @@
             <h2>I am a Full Stack Web Developer.</h2>
         </div>
         <div class="button-a">
-            <div>My Resume</div>
+            <div>MY RESUME</div>
         </div>
     </header>
 
@@ -73,8 +74,8 @@
                     </div>
                     <div class="buttons-screenshot">
                         <div class="buttons-section">
-                            <div class="button-b">View Project</div>
-                            <div class="button-b">View My Code</div>
+                            <div class="button-b">VIEW PROJECT</div>
+                            <div class="button-b">VIEW MY CODE</div>
                         </div>
                         <div class="screenshot">
                             Screenshot Here
@@ -97,8 +98,8 @@
                     </div>
                     <div class="buttons-screenshot">
                         <div class="buttons-section">
-                            <div class="button-b">View Project</div>
-                            <div class="button-b">View My Code</div>
+                            <div class="button-b">VIEW PROJECT</div>
+                            <div class="button-b">VIEW MY CODE</div>
                         </div>
                         <div class="screenshot">
                             Screenshot Here
@@ -119,8 +120,8 @@
                     </div>
                     <div class="buttons-screenshot">
                         <div class="buttons-section">
-                            <div class="button-b">View Project</div>
-                            <div class="button-b">View My Code</div>
+                            <div class="button-b">VIEW PROJECT</div>
+                            <div class="button-b">VIEW MY CODE</div>
                         </div>
                         <div class="screenshot">
                             Screenshot Here
@@ -140,8 +141,8 @@
                 <p>Want to see what else I've been working on?</p>
             </div>
             <div class="buttons-section-2">
-                <div class="button-b">More Projects</div>
-                <div class="button-a">Contact Me</div>
+                <div class="button-b">MORE PROJECTS</div>
+                <div class="button-a">CONTACT ME</div>
             </div>
         </div>
     </div>
@@ -149,10 +150,10 @@
     <footer>
         <div class="footer-bar">
             <nav>
-                <a href="#">Home</a>
-                <a href="#">My Work</a>
-                <a href="#">Resume</a>
-                <a href="#">Contact Me</a>
+                <a href="#">HOME</a>
+                <a href="#">MY WORK</a>
+                <a href="#">RESUME</a>
+                <a href="#">CONTACT ME</a>
             </nav>
             <div class="social-links">
                 <a href="#">GitHub</a>
