Experimenting with colors

--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
                 <a href="#">CONTACT ME</a>
             </div>
         </nav>
-        <div class="title">
-            <h1>Hello, World!</h1>
+        <div class="top-section">
+            <div class="title">
+                <h1>Hello, World!</h1>
+            </div>
+            <div class="header-text">
+                <h2>My name is Daisy.</h2>
+                <h2>I am a Full Stack Web Developer.</h2>
+            </div>
+            <div class="button-a">
+                MY RESUME
+            </div>
         </div>
-        <div class="header-text">
-            <h2>My name is Daisy.</h2>
-            <h2>I am a Full Stack Web Developer.</h2>
-        </div>
-        <div class="button-a">
-            <div>MY RESUME</div>
-        </div>
+
     </header>
 
     <div class="home-container">
@@ -44,6 +47,8 @@
             <h3>
                 More About Me
             </h3>
+        </div>
+        <div class="intro-section">
             <p>
                 I'm currently a full-time Team Lead at Lambda School, where I get to work with and mentor students
                 studying full stack web development.
@@ -68,14 +73,18 @@
                     </h4>
                 </div>
                 <div class="project-content">
-                    <div class="section-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
-                    </div>
-                    <div class="buttons-screenshot">
-                        <div class="buttons-section">
-                            <div class="button-b">VIEW PROJECT</div>
-                            <div class="button-b">VIEW MY CODE</div>
+                    <div class="text-screenshot">
+                        <div class="left-section">
+                            <div class="section-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt
+                                    ut
+                                    labore et dolore magna aliqua.</p>
+                            </div>
+                            <div class="buttons-section">
+                                <div class="button-a">VIEW PROJECT</div>
+                                <div class="button-b">VIEW MY CODE</div>
+                            </div>
                         </div>
                         <div class="screenshot">
                             Screenshot Here
@@ -83,7 +92,6 @@
                     </div>
                 </div>
             </div>
-
 
             <div class="project-section">
                 <div class="sub-heading">
@@ -92,14 +100,18 @@
                     </h4>
                 </div>
                 <div class="project-content">
-                    <div class="section-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
-                    </div>
-                    <div class="buttons-screenshot">
-                        <div class="buttons-section">
-                            <div class="button-b">VIEW PROJECT</div>
-                            <div class="button-b">VIEW MY CODE</div>
+                    <div class="text-screenshot">
+                        <div class="left-section">
+                            <div class="section-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt
+                                    ut
+                                    labore et dolore magna aliqua.</p>
+                            </div>
+                            <div class="buttons-section">
+                                <div class="button-a">VIEW PROJECT</div>
+                                <div class="button-b">VIEW MY CODE</div>
+                            </div>
                         </div>
                         <div class="screenshot">
                             Screenshot Here
@@ -107,6 +119,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="project-section">
                 <div class="sub-heading">
                     <h4>
@@ -114,14 +127,18 @@
                     </h4>
                 </div>
                 <div class="project-content">
-                    <div class="section-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
-                    </div>
-                    <div class="buttons-screenshot">
-                        <div class="buttons-section">
-                            <div class="button-b">VIEW PROJECT</div>
-                            <div class="button-b">VIEW MY CODE</div>
+                    <div class="text-screenshot">
+                        <div class="left-section">
+                            <div class="section-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt
+                                    ut
+                                    labore et dolore magna aliqua.</p>
+                            </div>
+                            <div class="buttons-section">
+                                <div class="button-a">VIEW PROJECT</div>
+                                <div class="button-b">VIEW MY CODE</div>
+                            </div>
                         </div>
                         <div class="screenshot">
                             Screenshot Here
@@ -129,39 +146,38 @@
                     </div>
                 </div>
             </div>
+
+            <div class="theres-more-container">
+                <div class="heading-section">
+                    <h3>
+                        There's More
+                    </h3>
+                </div>
+                <div class="section-text">
+                    <p>Want to see what else I've been working on?</p>
+                </div>
+                <div class="buttons-section-2">
+                    <div class="button-b">MORE PROJECTS</div>
+                    <div class="button-a">CONTACT ME</div>
+                </div>
+            </div>
         </div>
 
-        <div class="theres-more-container">
-            <div class="heading-section">
-                <h3>
-                    There's More
-                </h3>
+        <footer>
+            <div class="footer-bar">
+                <nav>
+                    <a href="#">HOME</a>
+                    <a href="#">MY WORK</a>
+                    <a href="#">RESUME</a>
+                    <a href="#">CONTACT ME</a>
+                </nav>
+                <div class="social-links">
+                    <a href="#">GitHub</a>
+                    <a href="#">LinkedIn</a>
+                    <a href="#">Twitter</a>
+                </div>
             </div>
-            <div class="section-text">
-                <p>Want to see what else I've been working on?</p>
-            </div>
-            <div class="buttons-section-2">
-                <div class="button-b">MORE PROJECTS</div>
-                <div class="button-a">CONTACT ME</div>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <div class="footer-bar">
-            <nav>
-                <a href="#">HOME</a>
-                <a href="#">MY WORK</a>
-                <a href="#">RESUME</a>
-                <a href="#">CONTACT ME</a>
-            </nav>
-            <div class="social-links">
-                <a href="#">GitHub</a>
-                <a href="#">LinkedIn</a>
-                <a href="#">Twitter</a>
-            </div>
-        </div>
-    </footer>
+        </footer>
 
 
 </body>
