--- a/index.html
+++ b/index.html
@@ -1,228 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<!-- <link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/> -->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+		/>
 
-    <link href="css/index.css" rel="stylesheet">
+		<link href="css/index.css" rel="stylesheet" />
 
-    <link
-        href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Inknut+Antiqua|Source+Sans+Pro|Open+Sans&display=swap"
-        rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Nunito|Open+Sans&display=swap"
+			rel="stylesheet"
+		/>
 
-    <title>Daisy Mesa - Portfolio</title>
-</head>
+		<title>Daisy Mesa - Portfolio</title>
+	</head>
 
-<body>
+	<body>
+		<nav>
+			<div class="nav-bar">
+				<a href="#">MY WORK</a>
+				<a href="#">RESUME</a>
+				<a href="#">CONTACT ME</a>
+			</div>
+		</nav>
+		<header>
+			<div class="top-container">
+				<div class="title">
+					<h1 class="line-0">Hello, World!</h1>
+				</div>
+				<div class="header-text">
+					<h2 class="line-1">My name is Daisy.</h2>
+					<h2 class="line-2">I am a Full Stack Web Developer.</h2>
+				</div>
+				<div class="button-a">
+					CONTACT ME
+				</div>
+			</div>
+		</header>
 
-    <header>
+		<section class="home-content">
+			<div class="about">
+				<div class="heading-section">
+					<h3>
+						More About Me
+					</h3>
+				</div>
+				<div class="text-section">
+					<p>
+						I'm currently a full-time Team Lead at Lambda School, where I get to
+						work with and mentor students studying full stack web development.
+					</p>
+					<p>
+						I'm based out of New York City, and I love technology and working
+						with others!
+					</p>
+				</div>
+			</div>
 
-        <nav>
-            <div class="nav-bar grow">
-                <a href="#">MY WORK</a>
-                <a href="#">RESUME</a>
-                <a href="#">CONTACT ME</a>
-            </div>
-        </nav>
+			<div class="about">
+					<div class="heading-section">
+						<h3>
+							My Skills
+						</h3>
+					</div>
+					<div class="text-section">
+						<p>
+							I'm currently a full-time Team Lead at Lambda School, where I get to
+							work with and mentor students studying full stack web development.
+						</p>
+						<p>
+							I'm based out of New York City, and I love technology and working
+							with others!
+						</p>
+					</div>
+				</div>
 
-        <div class="top-section">
-            <div class="title">
-                <h1 class="line-0">Hello, World!</h1>
-            </div>
-            <div class="header-text">
-                <h2 class="line-1">My name is Daisy.</h2>
-                <h2 class="line-2">I am a Full Stack Web Developer.</h2>
-            </div>
-            <div class="button-a">
-                MY RESUME
-            </div>
-        </div>
+			<div class="projects">
+				<div class="heading-section">
+					<h3>
+						My Projects
+					</h3>
+				</div>
 
-    </header>
+				<div class="project-container">
+					<div class="text-screenshot">
+						<div class="left-section">
+							<div class="project-text">
+								<h4>
+									Airbnb Clone
+								</h4>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</p>
+							</div>
+							<div class="buttons-section">
+								<div class="button-a">VIEW PROJECT</div>
+								<div class="button-b">VIEW MY CODE</div>
+							</div>
+						</div>
+						<div class="screenshot">
+							Screenshot Here
+						</div>
+					</div>
+				</div>
 
-    <div class="home-container">
-        <div class="heading-section">
-            <h3>
-                More About Me
-            </h3>
-        </div>
-        <div class="intro-section">
-            <p>
-                I'm currently a full-time Team Lead at Lambda School, where I get to work with and mentor students
-                studying full stack web development.
-            </p>
-            <p>
-                I'm based out of New York City, and I love technology and working with others!
-            </p>
-        </div>
+				<div class="project-container">
+					<div class="text-screenshot inverted">
+						<div class="left-section">
+							<div class="project-text">
+								<h4>
+									YouTube Clone
+								</h4>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</p>
+							</div>
+							<div class="buttons-section">
+								<div class="button-a">VIEW PROJECT</div>
+								<div class="button-b">VIEW MY CODE</div>
+							</div>
+						</div>
+						<div class="screenshot">
+							Screenshot Here
+						</div>
+					</div>
+				</div>
 
-        <div class="projects-container">
+				<div class="project-container">
+					<div class="text-screenshot">
+						<div class="left-section">
+							<div class="project-text">
+								<h4>
+									Airbnb Clone
+								</h4>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</p>
+							</div>
+							<div class="buttons-section">
+								<div class="button-a">VIEW PROJECT</div>
+								<div class="button-b">VIEW MY CODE</div>
+							</div>
+						</div>
+						<div class="screenshot">
+							Screenshot Here
+						</div>
+					</div>
+				</div>
 
-            <div class="heading-section">
-                <h3>
-                    My Projects
-                </h3>
-            </div>
+				<div class="project-container">
+					<div class="text-screenshot inverted">
+						<div class="left-section">
+							<div class="project-text">
+								<h4>
+									Airbnb Clone
+								</h4>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</p>
+							</div>
+							<div class="buttons-section">
+								<div class="button-a">VIEW PROJECT</div>
+								<div class="button-b">VIEW MY CODE</div>
+							</div>
+						</div>
+						<div class="screenshot">
+							Screenshot Here
+						</div>
+					</div>
+				</div>
+			</div>
 
-            <div class="project-section ">
+			<div class="bottom-container ">
+				<div class="heading-section bottom">
+					<h3>
+						There's More
+					</h3>
+				</div>
 
-                <div class="project-content">
+				<div class="intro-section theres-more">
+					<p>Want to see what else I've been working on?</p>
+					<div class="buttons-section">
+						<div class="button-b">
+							MORE PROJECTS</i>
+						</div>
+						<div class="button-a">CONTACT ME</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-                    <div class="text-screenshot">
-                        <div class="left-section">
-                            <div class="sub-heading">
-                                <h4>
-                                    Airbnb Clone
-                                </h4>
-                            </div>
-                            <div class="section-text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt
-                                    ut
-                                    labore et dolore magna aliqua.</p>
-                            </div>
-                            <div class="buttons-section">
-                                <div class="button-a">VIEW PROJECT</div>
-                                <div class="button-b">VIEW MY CODE</div>
-                            </div>
-                        </div>
-                        <div class="screenshot">
-                            Screenshot Here
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-section ">
-
-                <div class="project-content">
-
-                    <div class="text-screenshot inverted">
-                        <div class="left-section">
-                            <div class="sub-heading">
-                                <h4>
-                                    Let's Serve Soup
-                                </h4>
-                            </div>
-                            <div class="section-text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt
-                                    ut
-                                    labore et dolore magna aliqua.</p>
-                            </div>
-                            <div class="buttons-section">
-                                <div class="button-a">VIEW PROJECT</div>
-                                <div class="button-b">VIEW MY CODE</div>
-                            </div>
-                        </div>
-                        <div class="screenshot">
-                            Screenshot Here
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-section ">
-
-                <div class="project-content">
-
-                    <div class="text-screenshot">
-                        <div class="left-section">
-                            <div class="sub-heading">
-                                <h4>
-                                    Netflix Landing Page
-                                </h4>
-                            </div>
-                            <div class="section-text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt
-                                    ut
-                                    labore et dolore magna aliqua.</p>
-                            </div>
-                            <div class="buttons-section">
-                                <div class="button-a">VIEW PROJECT</div>
-                                <div class="button-b">VIEW MY CODE</div>
-                            </div>
-                        </div>
-                        <div class="screenshot">
-                            Screenshot Here
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-section ">
-
-                <div class="project-content">
-
-                    <div class="text-screenshot inverted">
-                        <div class="left-section">
-                            <div class="sub-heading">
-                                <h4>
-                                    Ride for Life
-                                </h4>
-                            </div>
-                            <div class="section-text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt
-                                    ut
-                                    labore et dolore magna aliqua.</p>
-                            </div>
-                            <div class="buttons-section">
-                                <div class="button-a">VIEW PROJECT</div>
-                                <div class="button-b">VIEW MY CODE</div>
-                            </div>
-                        </div>
-                        <div class="screenshot">
-                            Screenshot Here
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="bottom-container">
-            <div class="heading-section bottom">
-                <h3>
-                    There's More
-                </h3>
-            </div>
-            <!-- <div class="theres-more-container"> -->
-
-            <div class="intro-section theres-more">
-                <p>Want to see what else I've been working on?</p>
-                <div class="buttons-section">
-                    <div class="button-b">MORE PROJECTS</div>
-                    <div class="button-a">CONTACT ME</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <div class="footer-bar grow">
-            <nav>
-                <a href="#">HOME</a>
-                <a href="#">MY WORK</a>
-                <a href="#">RESUME</a>
-                <a href="#">CONTACT ME</a>
-            </nav>
-            <div class="social-links">
-                <a href="#">GitHub</a>
-                <a href="#">LinkedIn</a>
-                <a href="#">Twitter</a>
-            </div>
-        </div>
-    </footer>
-    <!-- </div> -->
-    <!-- </div> -->
-
-</body>
-
+		<footer>
+			<div class="footer-bar">
+				<!-- <nav>
+					<a href="#">HOME</a>
+					<a href="#">MY WORK</a>
+					<a href="#">CONTACT ME</a>
+				</nav> -->
+				<div class="social-links">
+					<a href="https://www.github.com/daisymesa/" target="_blank"
+						> <i class="fab fa-github fa-2x"></i
+					></a>
+					<a href="https://www.linkedin.com/in/mdaisy/" target="_blank"> <i class="fab fa-linkedin-in fa-2x"></i></a>
+					<a href="https://twitter.com/heyyimdaisy" target="_blank"> <i class="fab fa-twitter fa-2x"></i></a>
+					<a href="https://twitter.com/heyyimdaisy" target="_blank"> <i class="far fa-envelope fa-2x"></i></a>
+				</div>
+			</div>
+		</footer>
+		<!-- </div> -->
+		<!-- </div> -->
+	</body>
 </html>
