Added skills section

--- a/index.html
+++ b/index.html
@@ -70,22 +70,28 @@
 			</div>
 
 			<div class="about">
-					<div class="heading-section">
-						<h3>
-							My Skills
-						</h3>
+				<div class="heading-section">
+					<h3>
+						My Skills
+					</h3>
+				</div>
+				<div class="skills-cols">
+					<div class="list skills-left">
+						<ul>
+							<li>HTML5</li>
+							<li>CSS3</li>
+							<li>JavaScript</li>
+						</ul>
 					</div>
-					<div class="text-section">
-						<p>
-							I'm currently a full-time Team Lead at Lambda School, where I get to
-							work with and mentor students studying full stack web development.
-						</p>
-						<p>
-							I'm based out of New York City, and I love technology and working
-							with others!
-						</p>
+					<div class="list skills-right">
+						<ul>
+							<li>Reactjs</li>
+							<li>Redux</li>
+							<li>Nodejs/Express</li>
+						</ul>
 					</div>
 				</div>
+			</div>
 
 			<div class="projects">
 				<div class="heading-section">
@@ -94,6 +100,7 @@
 					</h3>
 				</div>
 
+				<!-- PROJECT 1 -->
 				<div class="project-container">
 					<div class="text-screenshot">
 						<div class="left-section">
@@ -117,8 +124,33 @@
 					</div>
 				</div>
 
+				<!-- PROJECT 2 -->
 				<div class="project-container">
 					<div class="text-screenshot inverted">
+						<div class="left-section">
+							<div class="project-text">
+								<h4>
+									Let's Serve Soup
+								</h4>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</p>
+							</div>
+							<div class="buttons-section">
+								<div class="button-a">VIEW PROJECT</div>
+								<div class="button-b">VIEW MY CODE</div>
+							</div>
+						</div>
+						<div class="screenshot">
+							Screenshot Here
+						</div>
+					</div>
+				</div>
+
+				<!-- PROJECT 3 -->
+				<div class="project-container">
+					<div class="text-screenshot">
 						<div class="left-section">
 							<div class="project-text">
 								<h4>
@@ -140,35 +172,13 @@
 					</div>
 				</div>
 
-				<div class="project-container">
-					<div class="text-screenshot">
-						<div class="left-section">
-							<div class="project-text">
-								<h4>
-									Airbnb Clone
-								</h4>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-								</p>
-							</div>
-							<div class="buttons-section">
-								<div class="button-a">VIEW PROJECT</div>
-								<div class="button-b">VIEW MY CODE</div>
-							</div>
-						</div>
-						<div class="screenshot">
-							Screenshot Here
-						</div>
-					</div>
-				</div>
-
+				<!-- PROJECT 4 -->
 				<div class="project-container">
 					<div class="text-screenshot inverted">
 						<div class="left-section">
 							<div class="project-text">
 								<h4>
-									Airbnb Clone
+									Ride for Life
 								</h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -198,7 +208,7 @@
 					<p>Want to see what else I've been working on?</p>
 					<div class="buttons-section">
 						<div class="button-b">
-							MORE PROJECTS</i>
+							MORE PROJECTS
 						</div>
 						<div class="button-a">CONTACT ME</div>
 					</div>
@@ -214,12 +224,18 @@
 					<a href="#">CONTACT ME</a>
 				</nav> -->
 				<div class="social-links">
-					<a href="https://www.github.com/daisymesa/" target="_blank"
-						> <i class="fab fa-github fa-2x"></i
+					<a href="https://www.github.com/daisymesa/" target="_blank">
+						<i class="fab fa-github fa-2x"></i
 					></a>
-					<a href="https://www.linkedin.com/in/mdaisy/" target="_blank"> <i class="fab fa-linkedin-in fa-2x"></i></a>
-					<a href="https://twitter.com/heyyimdaisy" target="_blank"> <i class="fab fa-twitter fa-2x"></i></a>
-					<a href="https://twitter.com/heyyimdaisy" target="_blank"> <i class="far fa-envelope fa-2x"></i></a>
+					<a href="https://www.linkedin.com/in/mdaisy/" target="_blank">
+						<i class="fab fa-linkedin-in fa-2x"></i
+					></a>
+					<a href="https://twitter.com/heyyimdaisy" target="_blank">
+						<i class="fab fa-twitter fa-2x"></i
+					></a>
+					<a href="https://twitter.com/heyyimdaisy" target="_blank">
+						<i class="far fa-envelope fa-2x"></i
+					></a>
 				</div>
 			</div>
 		</footer>
