--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-		<!-- <link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
-		/> -->
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
 		<link
 			rel="stylesheet"
@@ -30,9 +25,37 @@
 	<body>
 		<nav>
 			<div class="nav-bar">
-				<a href="#">MY WORK</a>
+				<a href="#my-projects">MY WORK</a>
+				<a href="#about-me">ABOUT ME</a>
 				<a href="#">RESUME</a>
-				<a href="#">CONTACT ME</a>
+				<a
+					class="typeform-share button"
+					href="https://daisymesa.typeform.com/to/mqs9Xe"
+					data-mode="popup"
+					target="_blank"
+					>CONTACT ME</a
+				>
+				<script>
+					(function() {
+						var qs,
+							js,
+							q,
+							s,
+							d = document,
+							gi = d.getElementById,
+							ce = d.createElement,
+							gt = d.getElementsByTagName,
+							id = 'typef_orm_share',
+							b = 'https://embed.typeform.com/';
+						if (!gi.call(d, id)) {
+							js = ce.call(d, 'script');
+							js.id = id;
+							js.src = b + 'embed.js';
+							q = gt.call(d, 'script')[0];
+							q.parentNode.insertBefore(js, q);
+						}
+					})();
+				</script>
 			</div>
 		</nav>
 		<header>
@@ -41,16 +64,54 @@
 					<h1 class="line-0">Hello, World!</h1>
 				</div>
 				<div class="header-text">
-					<h2 class="line-1">My name is Daisy.</h2>
-					<h2 class="line-2">I am a Full Stack Web Developer.</h2>
+					<h2>
+						My name is Daisy.
+						<br />
+						I am a Full Stack Web Developer.
+					</h2>
 				</div>
-				<div class="button-a">
-					CONTACT ME
-				</div>
+			</div>
+
+			<div class="contact-button">
+				<a
+					class="typeform-share "
+					href="https://daisymesa.typeform.com/to/mqs9Xe"
+					data-mode="popup"
+					target="_blank"
+					>WORK WITH ME</a
+				>
+				<script>
+					(function() {
+						var qs,
+							js,
+							q,
+							s,
+							d = document,
+							gi = d.getElementById,
+							ce = d.createElement,
+							gt = d.getElementsByTagName,
+							id = 'typef_orm_share',
+							b = 'https://embed.typeform.com/';
+						if (!gi.call(d, id)) {
+							js = ce.call(d, 'script');
+							js.id = id;
+							js.src = b + 'embed.js';
+							q = gt.call(d, 'script')[0];
+							q.parentNode.insertBefore(js, q);
+						}
+					})();
+				</script>
+				<!-- CONTACT ME -->
+				<!-- <i class="fas fa-angle-down"></i> -->
+			</div>
+			<div class="scroll-arrow">
+				<a href="#about-me">
+					<i class="fas fa-chevron-down fa-5x"></i>
+				</a>
 			</div>
 		</header>
 
-		<section class="home-content">
+		<section class="home-content" id="about-me">
 			<div class="about">
 				<div class="heading-section">
 					<h3>
@@ -62,6 +123,7 @@
 						I'm currently a full-time Team Lead at Lambda School, where I get to
 						work with and mentor students studying full stack web development.
 					</p>
+					<br />
 					<p>
 						I'm based out of New York City, and I love technology and working
 						with others!
@@ -78,22 +140,41 @@
 				<div class="skills-cols">
 					<div class="list skills-left">
 						<ul>
-							<li>HTML5</li>
-							<li>CSS3</li>
-							<li>JavaScript</li>
+							<li>
+								HTML5
+
+								<i class="fab fa-html5 fa-lg"></i>
+							</li>
+							<li>
+								CSS3
+								<i class="fab fa-css3-alt fa-lg"></i>
+							</li>
+							<li>
+								JavaScript/ES6
+								<i class="fab fa-js-square fa-lg"></i>
+							</li>
 						</ul>
 					</div>
 					<div class="list skills-right">
 						<ul>
-							<li>Reactjs</li>
-							<li>Redux</li>
-							<li>Nodejs/Express</li>
+							<li>
+								ReactJS
+								<i class="fab fa-react fa-lg"></i>
+							</li>
+							<li>
+								Redux
+								<i class="fas fa-code"></i>
+							</li>
+							<li>
+								Node.js/Express.js
+								<i class="fab fa-node-js fa-lg"></i>
+							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 
-			<div class="projects">
+			<div class="projects" id="my-projects">
 				<div class="heading-section">
 					<h3>
 						My Projects
@@ -106,7 +187,7 @@
 						<div class="left-section">
 							<div class="project-text">
 								<h4>
-									Airbnb Clone
+									Let's Serve Soup
 								</h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -130,7 +211,7 @@
 						<div class="left-section">
 							<div class="project-text">
 								<h4>
-									Let's Serve Soup
+									Ride for Life
 								</h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -178,7 +259,7 @@
 						<div class="left-section">
 							<div class="project-text">
 								<h4>
-									Ride for Life
+									Netflix Landing Page
 								</h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
